# neural-network

./: Cargo.toml  README.md
Data/: legend.txt
examples/dif/: 3d.rs  plot.rs  plot1.rs  plot_iris.rs
examples/tests/: file.rs  spiral.rs
src/: lib.rs  main.rs  prelude.rs  rng.rs  state.rs
src/data/: data.rs
src/enums/: enums_collection.rs  mod.rs
src/help_func/: fun.rs  mod.rs
src/linalg/: matrix.rs
src/loss_calc/: accuracy.rs  loss.rs  mod.rs
src/network/: feed_forward.rs  mod.rs  relu_network.rs
src/neuron_layer/: basic_layer.rs  mod.rs  neuron_layer.rs
src/neurons/: FireNeuron.rs  LeakyNeuron.rs  StaticNeuron.rs  leaky_neuron.rs  mod.rs  static_neuron.rs
src/optimizer/: mod.rs  stochastic.rs
src/output/: Id.rs  OutputTypFun.rs  Step.rs  fermi_function.rs  gauss_function.rs  id_function.rs  mod.rs  relu_function.rs  softmax.rs  step_function.rs  tangens_function.rs
src/state/: Euklid_Distance.rs  ScalarProd.rs  Scalar_Product.rs  euklid_distance.rs  manhattan_distance.rs  maximum_distance.rs  minimum_distance.rs  mod.rs  scalar_prod.rs  scalar_product.rs  state_function.rs
