[package]
edition = "2021"
name = "neuralnet"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "*", features = ["std_rng"]}
plotters = "0.3.4"
num-traits = "*"
rand_xorshift = "*"
rand_distr = "*"

[[example]]
name = "iris"
path = "examples/dif/plot_iris.rs" 

[[example]]
name = "plot"
path = "examples/dif/plot.rs" 